<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/main_color"
  tools:context=".Activities.MainActivity">

 <ScrollView
   android:layout_width="match_parent"
   android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <ImageView
        android:id="@+id/introhome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/intro_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


      <ImageView
        android:id="@+id/introhome2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:src="@drawable/gradient_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    
    
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="8dp"
      android:layout_marginStart="24dp"
      android:layout_marginEnd="24dp"
      android:orientation="vertical">


      <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/lema"
        />


      <TextView
        android:id="@+id/tvIntro3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:textSize="27sp"
        android:text="@string/sub_lema"
        />


      <TextView
        android:id="@+id/tvIntro4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="27sp"
        android:text="Seguridad de Principio a Fin"
        />

      <TextView
        android:id="@+id/tvIntro5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#9F9A9A"
        android:textStyle="bold"
        android:textSize="17sp"
        android:text="Disfruta de nuestros miles de productos "
        />

      <androidx.appcompat.widget.AppCompatButton
        style="@android:style/Widget.Button"
        android:layout_marginTop="8dp"
         android:background="@drawable/orange_button_background"
        android:id="@+id/btnIntro"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/name_inicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </LinearLayout>
    
  </LinearLayout>
 </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>