<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/main_color"
  android:focusable="true"
  android:focusableInTouchMode="true"
  tools:context=".Activities.Dashboard">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/editext_background"
        android:drawableStart="@drawable/search"
        android:layout_margin="16dp"
        android:drawablePadding="8dp"
        android:padding="12dp"
        android:drawableEnd="@drawable/microphone"
        android:hint="@string/strings_search_products"
        android:textColorHint="@color/white"
        />

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <androidx.viewpager2.widget.ViewPager2
          android:id="@+id/viewPagerSlide"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          />


      </androidx.constraintlayout.widget.ConstraintLayout>

      <TextView
        android:id="@+id/tvDashboardTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/string_best_products"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        />

      
      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/rvFavoriteProductsDash"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:clipToPadding="false"
          android:paddingStart="12dp"
          android:paddingEnd="12dp"

          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="1.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="1.0" />

        <ProgressBar
          android:id="@+id/pbDashBoard"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          style="?android:attr/progressBarStyle"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          />

      </androidx.constraintlayout.widget.ConstraintLayout>

      <TextView
        android:id="@+id/tvDashboardTwo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_categoriies"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="4dp"
        />


      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/rvCategoriesProductsDash"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:clipToPadding="false"
          android:paddingStart="12dp"
          android:paddingEnd="12dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          />

        <ProgressBar
          android:id="@+id/pbCategoryDashBoard"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          style="?android:attr/progressBarStyle"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="@+id/rvCategoriesProductsDash"
          app:layout_constraintStart_toStartOf="@+id/rvCategoriesProductsDash"
          app:layout_constraintTop_toTopOf="@+id/rvCategoriesProductsDash"
          />

      </androidx.constraintlayout.widget.ConstraintLayout>

      <TextView
        android:id="@+id/tvDashboardThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/week_motorola"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"/>


      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/rvDiscountsProductsDash"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:clipToPadding="false"
          android:paddingStart="12dp"
          android:paddingEnd="12dp"
          android:paddingBottom="70dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
          android:id="@+id/pbDiscountsDashBoard"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          style="?android:attr/progressBarStyle"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="@+id/rvDiscountsProductsDash"
          app:layout_constraintStart_toStartOf="@+id/rvDiscountsProductsDash"
          app:layout_constraintTop_toTopOf="parent"
          />

      </androidx.constraintlayout.widget.ConstraintLayout>



    </LinearLayout>
  </ScrollView>

  <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="100dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    >

    <com.google.android.material.bottomappbar.BottomAppBar
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:layout_gravity="bottom"
      android:backgroundTint="@color/dark_blue"
      >

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="0.25"
          android:orientation="vertical">

          <ImageView
            android:id="@+id/ivAppBarDash"
            android:layout_width="@dimen/dimen_24"
            android:layout_height="@dimen/dimen_24"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:src="@drawable/btn_1"
            app:tint="@color/white" />


          <TextView
            android:id="@+id/tvAppBarExploter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Explorar"
            android:textAlignment="center"
            android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="0.25"
          android:orientation="vertical">

          <ImageView
            android:id="@+id/ivAppBarDash2"
            android:layout_width="@dimen/dimen_24"
            android:layout_height="@dimen/dimen_24"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:src="@drawable/btn_2"
            app:tint="@color/white" />


          <TextView
            android:id="@+id/tvAppBarExploter2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Deseos"
            android:textAlignment="center"
            android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="0.25"
          android:orientation="vertical">

          <ImageView
            android:id="@+id/ivAppBarDash3"
            android:layout_width="@dimen/dimen_24"
            android:layout_height="@dimen/dimen_24"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:src="@drawable/btn_3"
            app:tint="@color/white" />


          <TextView
            android:id="@+id/tvAppBarExplote3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Carrito"
            android:textAlignment="center"
            android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="0.25"
          android:orientation="vertical">

          <ImageView
            android:id="@+id/ivAppBarDash4"
            android:layout_width="@dimen/dimen_24"
            android:layout_height="@dimen/dimen_24"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:src="@drawable/btn_4"
            app:tint="@color/white" />


          <TextView
            android:id="@+id/tvAppBarExploter4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Perfil"
            android:textAlignment="center"
            android:textColor="@color/white" />

        </LinearLayout>
      </LinearLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>
  </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>